# Naked-Web

./: .gitignore  README.md  install_ubuntu_everything.sh  pyproject.toml  reapply_browser_profile.bat  reapply_browser_profile.sh  upload.bat
naked_web/: __init__.py  content.py  crawler.py  pagination.py  scrape.py  search.py
naked_web/_data/: README.md
naked_web/automation/: __init__.py  actions.py  browser.py  models.py  state.py
naked_web/core/: __init__.py  config.py  models.py
naked_web/utils/: __init__.py  browser.py  profiles.py  stealth.py  text.py  timing.py
notebooks/: naked_web_showcase.ipynb
scripts/: browser_profile_bundle.py  live_fetch_test.py  reddit_test_output.html  smoke_test.py  stealth_test.py  test_profile_config.py  test_reddit_url.py  test_utilities.py  warmup_playwright_profile.py  warmup_profile.py
